[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage>=3.0.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "streamlit>=1.42.0",
]
